[gd_scene load_steps=3 format=3 uid="uid://c8x4m2y3qr9zt"]

[ext_resource type="Script" path="res://scripts/ui/popups/ShelterPopup.gd" id="1_0k8vx"]
[ext_resource type="Theme" path="res://themes/main_theme.tres" id="2_1h9kw"]

[node name="ShelterPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1h9kw")
script = ExtResource("1_0k8vx")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShelterTitle" type="Label" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üè† RIFUGIO - Azioni Disponibili"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="ShelterDescription" type="RichTextLabel" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Sei al sicuro in questo rifugio abbandonato. Puoi riposare, cercare risorse o utilizzare il banco da lavoro."
fit_content = true
scroll_active = false
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="ActionsContainer" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Action1" type="Button" parent="BackgroundPanel/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "[1] Riposa (+10 HP, +2 ore)"

[node name="Action2" type="Button" parent="BackgroundPanel/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "[2] Cerca Risorse (+30 min, skill check)"

[node name="Action3" type="Button" parent="BackgroundPanel/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "[3] Banco da Lavoro"

[node name="Action4" type="Button" parent="BackgroundPanel/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "[4] Lascia il Rifugio"

[node name="HSeparator3" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
text = "Chiudi [ESC] | Seleziona [1-4]"